Fix align

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ input[type="text"] {
 }
 
 .toggleSwitch {
-  width: 80px;
+  width: 70px;
   height: 40px;
   display: block;
   position: relative;
